# family-wallet

./: .database_env  .env  Cargo.toml  README.MD  docker-compose.yml  set_up_dev_env.sh  set_up_testing_env.sh  tear_down_dev_env.sh
src/: main.rs
src/account/: mocks.rs  mod.rs
src/api/: get_balance.rs  main_api.rs  mod.rs  sign_up.rs
src/api/error_responses/: mod.rs
src/child/: mocks.rs  mod.rs
src/children/: mod.rs
src/custom_errors/: mod.rs
src/db/: config.rs  mod.rs
src/db/actions/user/: mod.rs
src/db/models/: user.rs
src/db/sql/: add_user.sql  get_users.sql
src/db/sql/init/: schema.sql
src/env_variables/: mod.rs
src/head_of_the_house/: mod.rs
src/helpers/: mod.rs
src/master_account/: mod.rs
src/permissions/: mod.rs
src/testing_helpers/: mod.rs
