[package]
name = "family-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.20.0", default-feature = false, features = ["all-keys"] }
reqwest = {version= "0.11.11", features = ["json"]}
futures = "0.3"
tokio =  { version = "1", features = ["full"] }
tokio-test = "*"
actix-web = "4"
serde = "1.0.145"
