[package]
name = "family-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.20.0", default-feature = false, features = ["all-keys"] }
reqwest = {version= "0.11.11", features = ["json"]}
futures = "0.3"
tokio =  { version = "1", features = ["full"] }
tokio-test = "*"
actix-web = "4"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
